--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,6 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-l
-    RewriteRule . /index.html [L]
+    RewriteRule . public/index.html [L]
   
   </IfModule>
